2005-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h: Increment micro version.

2005-11-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobject.[ch]: Added G_CHILD_REMOVE_ALL.

2005-11-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_mainloop.c: rb_thread_wait_for waits 10ms instead of 100ms
	to avoid to lose any signals for Win32. Report by MIYAMUKO Katsuyuki.
	* src/rbgobject.[ch]: Added G_CHILD_SET, _UNSET, _ADD, _REMOVE.
	* src/rbgobj_object.c: Keeps ruby objects as instance variables
	of the object not to be GCed(GLib::Object#(set|get)_property).
	* src/rbgobject.c: Fixed memory leaks. Bug #1341573. Retrieve
	the code from 0.13.0. So, other libs need to support G_CHILD_*
	to avoid Tomasz's problem(2005-09-15).

2005-10-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h: Increment version information. 
	* src/rbglib_mainloop.c: Fixed to compile on Win32.

2005-10-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_type.c, rbglib_timer.c, rbglib_completion.c,
	rbgobject.c, rbgobj_type.c, rbglib_messages.c: 
	Fixed a compilation errors/warnings under GTK+-2.0/Ruby-1.6. 
	* src/rbglib.c, src/rbglib_timer.c: Added GLib::Timer.
	* sample/timer.rb: Added.
	* src/rbglib_completion.c: Added GLib::Completion.
	* sample/completion.rb: Added.

2005-10-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.c: Added constants from "Limits of Basic Types",
	 "Numerical Definitions".
	* src/rbglib_shell.c: Added GLib::Shell.
	* sample/shell.rb: Added.

2005-10-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/mkmf-gnome2.rb: Added make_version_header.

2005-10-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_mainloop.c: Works with ruby threads and signal handlers.
	Reported by Bram Senders.

2005-10-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_enums.c: Supports spaces in nick names. 
	Reported by Detlef Reichl.

2005-10-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/mkmf-gnome2.rb: Fix a bug to compile