@@ -1,6 +1,11 @@
+2005-11-23  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbglib_timer.c: Fix to compile on Cygwin.
+
 2005-11-14  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbglib.h: Increment micro version.
+	* src/rbgobject.h, glib2.def: Fixed problems on Win32.
 
 2005-11-05  Masao Mutoh  <mutoh@highway.ne.jp>
 
